[project]
name = "escola-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Sammadar dos Santos",email = "sammadar@outlook.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
packages = [{include = "escola_api", from = "src"}]
# poetry lock
# poetry add dataclasses-json

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
